--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.2.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "sendgrid": "^5.2.3"
   }
 }
