--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "find": "node --eval 'require(\"./modules/finder\").find()'"
+    "find": "node --eval 'require(\"./modules/finder\").find()'",
+    "find:test": "node --eval 'require(\"./modules/finder\").find(true)'",
   },
   "keywords": [],
   "author": "",
